--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-styled-components": "^1.10.6",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.14.3",
     "expo": "^34.0.1",
@@ -28,6 +26,12 @@
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-preset-expo": "^6.0.0"
   },
   "private": true
