--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "devtools": "adb reverse tcp:8081 tcp:8081 && react-devtools",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -32,7 +33,8 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "^6.0.0",
+    "react-devtools": "^3.6.3"
   },
   "private": true
 }
