--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "mobx-utils": "^5.4.1",
     "native-base": "^2.13.5",
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-web": "^0.11.4",
+    "react-native-gifted-chat": "^0.9.11",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
