--- a/app.json
+++ b/app.json
@@ -4,7 +4,11 @@
     "slug": "bubu-chat",
     "privacy": "public",
     "sdkVersion": "34.0.0",
-    "platforms": ["ios", "android", "web"],
+    "platforms": [
+      "ios",
+      "android",
+      "web"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,7 +20,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "androidStatusBarColor": "#334393",
     "androidStatusBar": {
       "barStyle": "light-content",
@@ -24,6 +30,8 @@
     },
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "bubu chat",
+    "githubUrl": "https://github.com/krasovsky22/bubu-chat"
   }
 }
