--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-react": "^7.14.3",
     "expo": "^34.0.1",
+    "expo-app-auth": "^6.0.0",
     "expo-asset": "^6.0.0",
     "expo-font": "^6.0.1",
+    "expo-google-sign-in": "^6.0.0",
+    "firebase": "^6.6.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "mobx-state-tree": "^3.14.1",
